# openstack-manager

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/: openstack_manager-config-generator.conf  openstack_manager.conf.sample
openstack_manager/cmd/: api.py  manager.py  manager_watchdog.py  start_watchdog.py
openstack_manager/conf/: config.py  constant.py  opts.py
openstack_manager/lib/: deploymanager.py  helm.py  rabbitmq.py  util.py
openstack_manager/service/: k8s_openstack_deploy_manager.py  k8s_openstack_monitor_manager.py  k8s_rabbitmq_manager.py  openstack.py  openstack_deploy_manager.py  rabbitmq.py  rabbitmq_manager.py  server.py  watchdog_wrapper.py  wsgi_app.py
tools/: setup.sh  write_resolv.sh
