[metadata]
name = openstack-manager
summary = Openstack Manager
description-file =
    README.md
author = Shunya Kitada
author-email = syun.kitada@gmail.com
home-page = https://github.com/syunkitada
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_manager

[entry_points]
console_scripts =
    k8s-openstack-deploy-manager = openstack_manager.cmd.manager:k8s_openstack_deploy_manager_main
    k8s-openstack-deploy-manager-watchdog = openstack_manager.cmd.manager_watchdog:k8s_openstack_deploy_manager_main
    k8s-openstack-monitor-manager = openstack_manager.cmd.manager:k8s_openstack_monitor_manager_main
    k8s-openstack-monitor-manager-watchdog = openstack_manager.cmd.manager_watchdog:k8s_openstack_monitor_manager_main
    k8s-rabbitmq-manager = openstack_manager.cmd.manager:k8s_rabbitmq_manager_main
    k8s-rabbitmq-manager-watchdog = openstack_manager.cmd.manager_watchdog:k8s_rabbitmq_manager_main

oslo.config.opts =
    openstack_manager.conf = openstack_manager.conf.opts:list_opts

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
max-line-length = 120
